# credere_analysis

./: .env.example  .gitignore  README.md  deploy_model.py  modelo_aportacion.py  modelo_basico.py  modelo_basico_completo.py  modelo_basico_paul.py  pyproject.toml  rxconfig.py
credere/: __init__.py  credere.py  state.py
credere/ai/: __init__.py  market_analysis.py  scoring.py
credere/calcs/: __init__.py  cashflow.py  engine.py  inputs.py  loan.py  ratios.py
credere/db/: __init__.py  client.py  models.py
credere/db/migrations/: 001_initial.sql
credere/pages/: __init__.py  dashboard.py  new_project.py  project_detail.py
credere/reports/: __init__.py  pdf.py
tests/: test_cashflow.py  test_loan.py
