[project]
name = "credere-analysis"
version = "0.2.0"
description = "Credere Lending - herramienta de analisis de operaciones inmobiliarias"
requires-python = ">=3.11"
dependencies = [
    "reflex>=0.6.0",
    "anthropic>=0.40.0",
    "supabase>=2.9.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "reportlab>=4.0",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]
